--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
     <title>AI Positive Affirmation Generator</title>
   </head>
   <body>
-    <h1>Hello, how are you feeling today?</h1>
+    <h1>Hello, what negative thought plagues you today?</h1>
+    <footer>
+      This was coded with 💜 by
+      <a
+        href="https://www.shecodes.io/graduates/77936-jessica-boll"
+        target="_blank"
+        title="SheCodes profile"
+        >Jessica Boll</a
+      >
+      and is
+      <a
+        href="https://github.com/ItsmeJessMarie/affirmation-generator"
+        target="_blank"
+        title="GitHub repository"
+        >open-sourced on GitHub</a
+      >
+      and is
+      <a
+        href="https://jb-ai-affirmation-generator.netlify.app/"
+        target="_blank"
+        title="Netlify link"
+        >hosted on Netlify</a
+      >
+      .
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
