Added html and form

--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>AI Positive Affirmation Generator</title>
   </head>
   <body>
-    <h1>Hello, what negative thought plagues you today?</h1>
+    <header>
+      <h1>AI Positive Affirmation Generator</h1>
+    </header>
+    <main>
+      What negative thought plagues you today?
+      <form>
+        <input
+          type="text"
+          placeholder="Enter a negative thought"
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <div>"I am enough."</div>
+    </main>
     <footer>
       This was coded with 💜 by
       <a
@@ -29,8 +44,7 @@
         target="_blank"
         title="Netlify link"
         >hosted on Netlify</a
-      >
-      .
+      >.
     </footer>
     <script src="src/index.js"></script>
   </body>
