Added ai api integration and updated css styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/styles.css" />
     <title>AI Positive Affirmation Generator</title>
   </head>
@@ -26,7 +27,9 @@
             class="instruction"
             placeholder="Enter a negative thought"
             required
+            autofocus
             autocomplete="off"
+            id="user-instructions"
           />
           <input type="submit" class="submit-button" />
         </form>
