Changed my profile from SheCodes to GitHub profile

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <footer>
         This AI project was coded by
         <a
-          href="https://www.shecodes.io/graduates/77936-jessica-boll"
+          href="https://github.com/ItsmeJessMarie"
           target="_blank"
-          title="SheCodes profile"
+          title="GitHub profile"
           >Jessica Boll</a
         >
         and is
