--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <footer>
         This AI project was coded by
         <a
-          href="https://github.com/ItsmeJessMarie"
+          href="https://www.shecodes.io/graduates/77936-jessica-farnan"
           target="_blank"
-          title="GitHub profile"
-          >Jessica Boll</a
+          title="SheCodes profile"
+          >Jessica Farnan</a
         >
         and is
         <a
